server code error correction

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 *.opendb
 *.sdf
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/CL.command.1.tlog
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/CL.read.1.tlog
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/CL.write.1.tlog
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/WinsockClient.lastbuildstate
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/link.command.1.tlog
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/link.read.1.tlog
+winsock/WinsockClient/WinsockClient/Debug/WinsockClient.tlog/link.write.1.tlog
+winsock/WinsockClient/WinsockClient/Debug/vc140.idb
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/CL.command.1.tlog
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/CL.read.1.tlog
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/CL.write.1.tlog
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/WinsockServer.lastbuildstate
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/link.command.1.tlog
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/link.read.1.tlog
+winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/link.write.1.tlog
+winsock/WinsockServer/WinsockServer/Debug/vc140.idb
