--- a/winsock/WinsockServer/WinsockServer/WinsockServer.vcxproj
+++ b/winsock/WinsockServer/WinsockServer/WinsockServer.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="TCPServer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
