demo2 server code

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/link.command.1.tlog
 winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/link.read.1.tlog
 winsock/WinsockServer/WinsockServer/Debug/WinsockServer.tlog/link.write.1.tlog
 winsock/WinsockServer/WinsockServer/Debug/vc140.idb
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/CL.command.1.tlog
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/CL.read.1.tlog
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/CL.write.1.tlog
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/demo2Server.lastbuildstate
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/link.command.1.tlog
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/link.read.1.tlog
+winsock/demo2Server/demo2Server/Debug/demo2Server.tlog/link.write.1.tlog
+winsock/demo2Server/demo2Server/Debug/vc140.idb
