--- a/chat/ChatServer/LogicLib/LogicLib.vcxproj
+++ b/chat/ChatServer/LogicLib/LogicLib.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="PacketProcess.h" />
     <ClInclude Include="Room.h" />
+    <ClInclude Include="RoomManager.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="UserManager.h" />
   </ItemGroup>
@@ -42,6 +43,7 @@
     <ClCompile Include="PacketProcessLogin.cpp" />
     <ClCompile Include="PacketProcessRoom.cpp" />
     <ClCompile Include="Room.cpp" />
+    <ClCompile Include="RoomManager.cpp" />
     <ClCompile Include="UserManager.cpp" />
   </ItemGroup>
   <ItemGroup>
